--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,15 @@ button:active {
     border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;
   }
 }
+@keyframes moving {
+  0% {
+    transform: translateY(0px);
+  }
+  
+  100% {
+    transform: translateY(-1000px);
+  }
+}
 .form__group {
   position: relative;
   padding: 20px 0 0;
@@ -186,4 +195,85 @@ button:active {
 .form__field:required,
 .form__field:invalid {
   box-shadow: none;
+}
+
+/* Animaciones y estilo de las burbujas */
+.bubbles {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Asegurar que estén detrás del contenido */
+  pointer-events: none; /* Evitar interacción con las burbujas */
+  overflow: hidden;
+  opacity: .6;
+
+}
+
+.bubbles li {
+  position: absolute;
+  list-style: none;
+  display: block;
+  background-color: #ff8722;
+  border-radius: 50%; /* Inicialmente redondas */
+  bottom: -150px; /* Comienza fuera de la pantalla */
+  animation: bubble-rise 12s infinite ease-in-out, morphing 8s infinite ease-in-out;
+}
+
+/* Animación de movimiento hacia arriba */
+@keyframes bubble-rise {
+  0% {
+    transform: translateY(0);
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    transform: translateY(-110vh); /* Fuera del viewport */
+    opacity: 0;
+  }
+}
+
+/* Estilo para cada burbuja */
+.bubbles li:nth-child(1) {
+  width: 40px;
+  height: 40px;
+  left:30% ;
+  animation-delay: 0s;
+  animation-duration: 10s;
+}
+
+.bubbles li:nth-child(2) {
+  width: 50px;
+  height: 50px;
+  left: 85%;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.bubbles li:nth-child(3) {
+  width: 15px;
+  height: 15px;
+  left: 50%;
+  animation-delay: 4s;
+  animation-duration: 9s;
+}
+
+.bubbles li:nth-child(4) {
+  width: 30px;
+  height: 30px;
+  left: 70%;
+  animation-delay: 6s;
+  animation-duration: 11s;
+}
+
+.bubbles li:nth-child(5) {
+  width: 20px;
+  height: 20px;
+  
+  left:20% ;
+  animation-delay: 1s;
+  animation-duration: 13s;
 }
